--- a/test-nagios.in
+++ b/test-nagios.in
@@ -33,8 +33,8 @@ mkdir -p $TMP/db
 mkdir -p $TMP/cache
 
 # Generate the server keys
-jose gen -t '{"alg": "ES256"}' -o $TMP/db/sig.jwk
-jose gen -t '{"kty": "EC", "crv": "P-256", "key_ops": ["deriveKey"] }' -o $TMP/db/exc.jwk
+jose jwk gen -i '{"alg": "ES256"}' -o $TMP/db/sig.jwk
+jose jwk gen -i '{"kty": "EC", "crv": "P-256", "key_ops": ["deriveKey"] }' -o $TMP/db/exc.jwk
 ${srcdir}/tangd-update $TMP/db $TMP/cache
 
 # Start the server
