Correct dependency order of systemd unit files
The socket shouldn't open until all the other units have completed.

Fixes: #22

--- a/units/tangd.socket.in
+++ b/units/tangd.socket.in
@@ -1,7 +1,10 @@
 [Unit]
 Description=Tang Server socket
-Requires=tangd-update.path
 Requires=tangd-keygen.service
+Requires=tangd-update.service
+Requires=tangd-update.path
+After=tangd-keygen.service
+After=tangd-update.service
 
 [Socket]
 ListenStream=80
