Generate manual pages from source during build time
If a2x (asciidoc) is not available during configure time,
a warning will be generated and the manual pages wont be
generated nor installed.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,8 @@
 DISTCHECK_CONFIGURE_FLAGS = --with-systemdsystemunitdir=$$dc_install_base/$(systemdsystemunitdir)
+BUILT_SOURCES=
+CLEANFILES=
+man1_MANS=
+man8_MANS=
 
 AM_CFLAGS = @TANG_CFLAGS@ @jose_CFLAGS@
 LDADD = @jose_LIBS@ @http_parser_LIBS@
@@ -17,13 +21,32 @@ nodist_systemdsystemunit_DATA = \
 dist_libexec_SCRIPTS = src/tangd-update src/tangd-keygen
 dist_bin_SCRIPTS = src/tang-show-keys
 libexec_PROGRAMS = src/tangd
-man1_MANS = doc/tang-show-keys.1
-man8_MANS = doc/tang.8
+nagios_PROGRAMS = src/tang
+
+man_ADOC_FILES= \
+	doc/tang-nagios.1.adoc \
+	doc/tang-show-keys.1.adoc \
+	doc/tang.8.adoc
+
+if HAVE_A2X
+man_ROFF_FILES = $(man_ADOC_FILES:.adoc=.roff)
+BUILT_SOURCES += $(man_ROFF_FILES)
+CLEANFILES += $(man_ROFF_FILES) $(man_ROFF_FILES:.roff=)
+
+$(top_builddir)/%.roff: %.adoc
+	$(MKDIR_P) $$(dirname $@)
+	$(A2X) -v -f manpage $^ -D $(top_builddir)/$$(dirname $@)
+	$(INSTALL) -m 644 $(top_builddir)/$(@:.roff=) $(top_builddir)/$@
+
+man1_MANS += doc/tang-show-keys.1
+man8_MANS += doc/tang.8
+endif
 
 if NAGIOSPLUGIN
 nagios_PROGRAMS = src/tang
+if HAVE_A2X
 man1_MANS += doc/tang-nagios.1
-
+endif
 src_tang_SOURCES = src/nagios.c
 endif
 
@@ -43,10 +66,9 @@ if NAGIOSPLUGIN
 TESTS += tests/nagios
 endif
 
-CLEANFILES = $(nodist_systemdsystemunit_DATA)
+CLEANFILES += $(nodist_systemdsystemunit_DATA)
 EXTRA_DIST = \
     $(foreach unit,$(nodist_systemdsystemunit_DATA),$(unit).in) \
     COPYING \
     $(TESTS) \
-    $(man1_MANS) \
-    $(man8_MANS)
+    $(man_ADOC_FILES)
