--- a/units/meson.build
+++ b/units/meson.build
@@ -3,8 +3,17 @@ tangd_service = configure_file(
   output: 'tangd@.service',
   configuration: data
 )
-
-units += join_paths(meson.current_source_dir(), 'tangd.socket')
-units += tangd_service
+if build_machine.system() == 'freebsd'
+  tangd_rc = configure_file(
+    input: 'tangd.rc.in',
+    output: 'tangd',
+    configuration: data,
+    install_dir: join_paths(get_option('prefix') + sysconfdir, 'rc.d'),
+    install_mode: ['rwxr-xr-x', 'root', 'wheel']
+  )
+else
+  units += join_paths(meson.current_source_dir(), 'tangd.socket')
+  units += tangd_service
+endif
 
 # vim:set ts=2 sw=2 et:
