--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,10 @@ jobs:
       - name: Run tests
         run: |
           cd build
-          meson test || cat meson-logs/testlog.txt >&2
+          if ! meson test ; then
+              cat meson-logs/testlog.txt >&2
+              exit -1
+          fi
 
       - name: Show full test logs
         run: |
