Consider cross compilation
Use host_machine vs. build_machine to allow potential cross compilation to freebsd

--- a/units/meson.build
+++ b/units/meson.build
@@ -3,7 +3,7 @@ tangd_service = configure_file(
   output: 'tangd@.service',
   configuration: data
 )
-if build_machine.system() == 'freebsd'
+if host_machine.system() == 'freebsd'
   tangd_rc = configure_file(
     input: 'tangd.rc.in',
     output: 'tangd',
