Some FreeBSD fixes.  build_machine -> host_machine for potential cross-complilation BSD seems to insist the -- for parameter option ending come before the mode and user/group in chmod and chown.  The BSD stat uses a different format option and format string than Linux.

--- a/src/tangd-keygen.in
+++ b/src/tangd-keygen.in
@@ -26,8 +26,8 @@ usage() {
 }
 
 set_perms() {
-    chmod 0440 -- "${1}"
-    if ! chown @user@:@group@ -- "${1}" 2>/dev/null; then
+    chmod -- 0440 "${1}"
+    if ! chown -- @user@:@group@ "${1}" 2>/dev/null; then
         echo "Unable to change owner/group for ${1} to @user@:@group@" >&2
     fi
 }
