--- a/src/tangd-rotate-keys.in
+++ b/src/tangd-rotate-keys.in
@@ -49,8 +49,8 @@ error() {
 }
 
 set_perms() {
-    chmod 0440 -- "${1}"
-    if ! chown @user@:@group@ -- "${1}" 2>/dev/null; then
+    chmod -- 0440 "${1}"
+    if ! chown -- @user@:@group@ "${1}" 2>/dev/null; then
         echo "Unable to change owner/group for ${1} to @user@:@group@" >&2
     fi
 }
