Fix a few more typos

--- a/doc/meson.build
+++ b/doc/meson.build
@@ -1,4 +1,5 @@
 mans += join_paths(meson.current_source_dir(), 'tang-show-keys.1')
+mans += join_paths(meson.current_source_dir(), 'tangd-rotate-keys.1')
 mans += join_paths(meson.current_source_dir(), 'tang.8')
 
 # vim:set ts=2 sw=2 et:
