systemd: Make use of a configuration file for tangd args
To enable the client authorization directory before this change, the
main systemd service unit file needed to be modified.  This is less
ideal and we can use EnvironmentFile= feature in the unit file to read a
file with environmental variables the tangd@.service will use for the
command line.

Signed-off-by: David Sommerseth <davids@openvpn.net>

--- a/units/meson.build
+++ b/units/meson.build
@@ -3,6 +3,13 @@ tangd_service = configure_file(
   output: 'tangd@.service',
   configuration: data
 )
+tangd_conf = configure_file(
+  input: 'tangd.conf.in',
+  output: 'tangd.conf',
+  configuration: data,
+  install_dir: join_paths(sysconfdir, 'tangd'),
+)
+
 if host_machine.system() == 'freebsd'
   tangd_rc = configure_file(
     input: 'tangd.rc.in',
@@ -14,6 +21,7 @@ if host_machine.system() == 'freebsd'
 else
   units += join_paths(meson.current_source_dir(), 'tangd.socket')
   units += tangd_service
+  units += tangd_conf
 endif
 
 # vim:set ts=2 sw=2 et:
