A few small changes for BSD support after standalone changes and keep up with Ubuntu in tests.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
           - debian:testing
           - debian:latest
           - ubuntu:rolling
+          - ubuntu:jammy
+          - ubuntu:focal
           - ubuntu:bionic
         stable: [true]
         include:
