tangd.socket: Set ownership and mode of jwkdir
On OSTree-enabled systems (such as Fedora CoreOS), every update
recreates the passwd and group files, which means that the
dynamically-assigned ID and GID of the tang daemon may change,
depending on the order of createuser calls. This patch ensures
that starting the socket unit will fix any ownership issues in
the jwkdir.

This is essentially moving the Fedora %post script[1] out of RPM
and into the systemd unit instead.

[1] https://src.fedoraproject.org/rpms/tang/blob/ba7119863624a55ac4bf79e19acd2a26350896e0/f/tang.spec#_68

Signed-off-by: Stephen Gallagher <sgallagh@redhat.com>

--- a/units/meson.build
+++ b/units/meson.build
@@ -3,6 +3,11 @@ tangd_service = configure_file(
   output: 'tangd@.service',
   configuration: data
 )
+tangd_socket = configure_file(
+  input: 'tangd.socket.in',
+  output: 'tangd.socket',
+  configuration: data
+)
 if host_machine.system() == 'freebsd'
   tangd_rc = configure_file(
     input: 'tangd.rc.in',
@@ -12,7 +17,7 @@ if host_machine.system() == 'freebsd'
     install_mode: ['rwxr-xr-x', 'root', 'wheel']
   )
 else
-  units += join_paths(meson.current_source_dir(), 'tangd.socket')
+  units += tangd_socket
   units += tangd_service
 endif
 
