Use quay.io version of Fedora Rawhide container
Resolves: #118

Signed-off-by: Sergio Arroutbi <sarroutb@redhat.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           - ubuntu:kinetic
         stable: [true]
         include:
-          - os: fedora:rawhide
+          - os: quay.io/fedora/fedora:rawhide
             stable: false
           - os: ubuntu:devel
             stable: false
